# tracker

./: .gitignore  .pylintrc  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  fixtures.py  gunicorn.conf.py  local_db.sqlite  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 81f92868b163_added_account_table.py
app/: main.py
app/cache/: __init__.py  accessor.py
app/clients/: __init__.py  google_client.py  yandex_client.py
app/core/: __init__.py
app/database/: __init__.py  database.py
app/endpoints/: __init__.py  auth.py  categories.py  tasks.py  users.py
app/models/: __init__.py  categories.py  tasks.py  users.py
app/repository/: __init__.py  base_repo.py  cache_categories_repo.py  cache_task_repo.py  categories_repo.py  tasks_repo.py  user_repo.py
app/schemas/: __init__.py  task.py
app/service/: auth_service.py  depends.py  (+3 more)
cache/: __init__.py  accessor.py
cache copy/: accessor.py
clients/: __init__.py  google_client.py  yandex_client.py
core/: settings.py
database/: base_repo.py  database.py  models.py  tasks_repo.py
endpoints/: __init__.py  auth.py  categories.py  ping.py  tasks.py  users.py
migrations/: env.py
repository/: __init__.py  base_repo.py  cache_base_repo.py  cache_categories_repo.py  cache_task_repo.py  categories_repo.py  tasks_repo.py  user_repo.py
schemas/: __init__.py  auth.py  category.py  task.py  user.py
service/: auth_service.py  category_service.py  depends.py  task_service.py  user_service.py
tests/: conftest.py
utils/: __init__.py  exeptions.py  unitofwork.py
(+19 files in other folders)
