[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["DRomanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
redis = "^5.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
