[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["DRomanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
redis = "^5.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.31.0"
httpx = "^0.27.0"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
pytest = "^8.2.1"
pip = "^24.0"
install = "^1.3.5"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
